css/main.css
/* Set all box sizing to border-box */
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

.hidden {
    font-size: 0;
    color: rgba(251, 251, 251, 0);
    line-height: 0;
}

/* Insert background image  */
body {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: 400;
    color: #1f1d25;
    background-repeat: repeat-y;
}

body.paper1 {
    background-image: url(../img/background-paper.jpg);
}

body.canvas1 {
    background-image: url(../img/background-canvas.jpg);
}

body.gold1 {
    background-image: url(../img/background-gold.jpg);
}

body.silver1 {
    background-image: url(../img/background-silver.jpg);
}

/*  set initial fonts */
h1 {
    margin-top: 0;
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: bold;
}

h2 {
    font-family: 'Vollkorn', serif;
    font-weight: 900;
    font-size: 1.3rem;
    margin-bottom: 0.5rem;
    padding-top: 0.5rem;
}

h3 {
    font-family: 'Fira Sans Condensed', sans-serif;
    font-weight: 700;
    color: #ed1c24;
    font-size: 1.2rem;
    margin-bottom: 0.5rem;
}

/*  style header */
header {
    background-color: #ffffff;
    padding: 3% 0 0 0;
}

header img {
    padding: 0 1% 0 3%;
    width: 33%;
    display: inline-block;
}

header h1 {
    width: 65%;
    display: inline-block;
    vertical-align: top;
    font-size: 0.85rem;
}

header ul {
    margin: 0;
    padding: 1% 2% 2% 2%;
    display: inline-block;
    width: 49%;
    text-align: center;
    font-size: 0.7rem;
}

Ul {
    list-style-type: none;
}

header nav {
    background-color: #1f1d25;
    color: #ffffff;
}

header nav ul {
    padding: 2% 0;
    width: 100%;
}

main {
    padding-left: 2%;
    padding-right: 2%;
    margin: 0 2%;
}

.paper1 main {
    background-color: rgba(251, 251, 251, 0.75);
}

.canvas1 main section {
    padding: 2%;
    margin-top: 2%;
    margin-bottom: 4%;
    background-color: rgba(251, 251, 251, 0.75);
}

.gold1 main {
    background-color: rgba(251, 251, 251, 0.75);
}

.silver1 main {
    background-color: rgba(251, 251, 251, 0.75);
}

main figure#featureimage {
    margin: 0;
    border: solid 1rem #1f1d25;
}

main figure img {
    width: 100%;
}

#donate {
    position: relative;
    width: 50%;
    margin: 0;
    float: right;
    max-width: 223px;
}


/* Drop shadow for irregular shaped png image of buttons */
.drop-shadow {
    filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
}

#donate figcaption {
    font-family: 'Vollkorn', serif;
    font-size: 1.3rem;

    position: absolute;
    top: 15%;
    width: 70%;
    text-align: center;
    margin: 0 15%;
}

a#donatelink {
    text-decoration: none;
}

.red {
    color: #ed1c24;
}


/* I gave the sponsor logo a specific width, so that the text below would stay matching this width as the window resizes. */
#sponsorlogoheader {
    width: 130px;
}



#sponsorlogoheader {
    border-bottom: 1px solid #1f1d25;
    margin: 0;
}

#sponsorlist {
    width: 100%;
}

#sponsorlist img {
    width: 100%;
    max-width: 100px;
    display: inline-block;
    margin: 0 5% 3% 0;
    vertical-align: middle;
}

#sponsorlogoheader img {
    width: 100%;
}

footer {
    background: #ffffff;
}

footer ul {
    display: inline-block;
}

footer ul {
    width: 80%;
    margin: 0 10%;
    padding: 5% 0;
}

footer #donate {
    width: 100%;
}

footer ul li {
    width: calc(95% / 4);
    display: inline-block;
    vertical-align: middle;
}

footer ul li:hover {
    filter: drop-shadow(0 1px 3px rgba(31, 29, 37, 0.5));
}

footer ul li a img {
    width: 80%;
    margin: 0 10%;
}

footer p {
    color: rgba(31, 29, 37, 0.5);
    margin: 0;
    padding: 0 0 1% 0;
    text-align: center;
}

#policy {
    color: #406fb6;
    cursor: pointer;
}

#policy:hover {
    text-decoration: underline;
}

#closepolicy {
    width: 25px;
    position: relative;
    left: 90%;
    cursor: pointer;
    margin-top: 0.5rem;
}

#showpolicy {
    background-color: rgba(31, 29, 37, 0.1);
}

#showpolicy h3 {
    font-size: 1.2rem;
    margin-top: 0;
}

#levels ul {
    list-style-type: circle;
    padding-left: 1.5rem;
}

#call {
    padding-bottom: 1rem;
}

#call ul li {
    list-style-type: none;
}

#call ul li:first-of-type {
    list-style-type: circle;
}

#call ul li:first-of-type h4 {
    margin-bottom: 0.4rem;
}

#levels ul li {
    padding-bottom: 0.4rem;
}

#levels ul li ul {
    list-style-type: disc;
}

#levels ul li ul li:first-of-type {
    padding-top: 0.4rem;
}

#sites ul,
#call ul {
    padding-left: 1.5rem;
    line-height: 1.35rem;
}

#sites ul li a,
#call a {
    text-decoration: none;
    color: #406fb6;
}

#sites ul li a:hover,
#call a:hover {
    text-decoration: underline;
}

